# apex

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.en.md  README.md  README.ru.md  pyproject.toml
.github/workflows/: docs.yml  lint.yml  publish.yml
astrageek/catalogs/constellations/: __init__.py  constellation_centers.json  constellations_data.json  example_constellation_contours.py
astrageek/catalogs/hip/: __init__.py
astrageek/catalogs/messier/: __init__.py  messier_catalog.py
astrageek/catalogs/planets/: __init__.py
astrageek/game/: __init__.py  question_factory.py  session.py
astrageek/helpers/constellations/: constellation_renderer_pinhole.py  constellation_renderer_stereo.py
astrageek/helpers/geometry/: geometry.py
astrageek/helpers/pdf_helpers/: figure2pdf.py  figure2pdf_example.py
astrageek/helpers/time/: time.py  time_example.py
astrageek/interface/: cli.py
astrageek/messier_game/: __init__.py  game.py
astrageek/projections/cylindric/: __init__.py  cylidric_projector.py  example_basic.py
astrageek/projections/pinhole/: __init__.py  pinhole_projection_example.py  pinhole_projector.py  samples_generator.py
astrageek/projections/stereographic/: __init__.py  constellation_example.py  samples_generator.py  stereographic_projector.py  stereographic_projector_example.py
astrageek/scenarios/: __init__.py  cylindric_planets_movement.py  pinhole_plane_animation.py  static_retrograde_movement.py
constellations_metadata/: __init__.py  constellation_lines.py  constellations_data.py  contellations_centers.py  example_constellation_contours.py
cylindric_projection/: cylidric_projector.py  example_basic.py
docs/: .buildinfo  cli.html  code.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_sources/: index.rst.txt  installation.rst.txt  quickstart.rst.txt
helpers/: geometry.py
helpers/geometry/: geometry.py
helpers/pdf_helpers/: figure2pdf.py  figure2pdf_example.py
helpers/time/: time_example.py
hip_catalog/: __init__.py  hip_catalog.py
messier/: messier_catalog.py  messier_example.py
messier_pygame/: __init__.py  game.py
pinhole_projection/: constellation_renderer.py  pinhole_projection_example.py  pinhole_projector.py  samples_generator.py
planets_catalog/: __init__.py  planet_catalog.py
scenarios/: cylindric_planets_movement.py  pinhole_plane_animation.py  static_retograde_movment.py  static_retrograde_movement.py
sphinx/: cli.rst  code.rst  conf.py  index.rst  installation.rst  quickstart.rst
sphinx/_build/doctrees/: cli.doctree  index.doctree  installation.doctree  quickstart.doctree
sphinx/_build/html/: .buildinfo  changelog.html  cli.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  search.html  searchindex.js
src/: cli.py  temp.py
src/constellations_metadata/: __init__.py  constellations_data.py  contellations_centers.py  example_constellation_contours.py  lines_data.json  parse_index.py
src/cylindric_projection/: cylidric_projector.py  example_basic.py
src/game/: __init__.py  game_documentation.md  question_factory.py  scoring.py  session.py
src/helpers/: __init__.py
src/helpers/cli/: cli.py
src/helpers/constellations/: constellation_renderer_pinhole.py  constellation_renderer_stereo.py
src/helpers/geometry/: geometry.py
src/helpers/pdf_helpers/: figure2pdf.py  figure2pdf_example.py
src/helpers/time/: time.py  time_example.py
src/hip_catalog/: __init__.py  hip_catalog.py
src/interface/: cli.py
src/messier/: __init__.py  messier_catalog.py
src/messier_pygame/: game.py
src/pinhole_projection/: __init__.py  constellation_renderer.py  pinhole_projection_example.py  pinhole_projector.py  samples_generator.py
src/planets_catalog/: __init__.py  planet_catalog.py
src/scenarios/: __init__.py  cylindric_planets_movement.py  pinhole_plane_animation.py
src/stereographic_projection/: __init__.py  constellation_example.py  constellation_renderer_stereo.py  samples_generator.py  stereographic_projector.py  stereographic_projector_example.py
src/web/: app.py  astra_etudes_blueprint.py  game_blueprint.py  messier_api.py  messier_blueprint.py
src/web/public_html/: game_constellation.html  game_draw.html  game_messier.html  game_star.html  game_trivia.html  games.html  generator.html  index.html  messier.html
stereographic_projection/: constellation_example.py  constellation_renderer_stereo.py  samples_generator.py  stereo_projector_with_constellations.py  stereographic_projector.py  stereographic_projector_example.py
stereographic_projection/helpers/: geometry.py  time.py  time_example.py
stereographic_projection/helpers/pdf_helpers/: figure2pdf_example.py
stereographic_projection/hip_catalog/: hip_catalog.py
tools/: make_pypi_readme.py
web/: app.py  astra_etudes_blueprint.py  game_blueprint.py  messier_api.py
web/game/: __init__.py  game_documentation.md  question_factory.py  scoring.py  session.py
web/public_html/: index.html
web/static/: game_constellation.html  game_draw.html  game_messier.html  game_star.html  game_trivia.html  games.html  generator.html  index.html
web/static/astra-etudes/: index.html  orbital-simulator.html
(+3 files in other folders)
