[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "astrageek"
version = "0.2.4.post1"
authors = [
    {name = "Ilia Bespyatyy", email = "ilia.bespytatyy@gmail.com"},
    {name = "Maksim Ramenskyy", email = "msramenskiy@edu.hse.ru"},
]
description = "Star maps maker"
readme = "README_PYPI.md"
requires-python = ">=3.10"
keywords = ["skychart", "python", "astronomy", "maps"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy",
    "matplotlib",
    "astropy",
    "scipy",
    "pandas",
    "pillow",        # PIL
    "loguru",
    "click>=8.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0,<9.0", # mocks errors
    "furo",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    "sphinx-copybutton",
    "sphinx-pyproject",
    "myst-parser",
]
dev = [
    "build",
    "twine",
    "ruff",
    "pre-commit",
]
web = ["flask"]

[tool.ruff]
line-length = 79
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.setuptools.packages.find]
where = ["."]
include = ["astrageek*"]

[tool.setuptools.package-data]
"astrageek.catalogs.hip" = ["*.tsv"]
"astrageek.catalogs.constellations" = ["*.json"]
"astrageek.helpers.pdf_helpers" = ["*.png", "*.jpg"]

[tool.sphinx-pyproject]
project = "AstraGeek"

extensions = [
    "sphinx.ext.autodoc",
    "sphinx.ext.githubpages",
    "sphinx.ext.napoleon",
    "sphinx.ext.intersphinx",
    "sphinx_autodoc_typehints",
    "sphinx_click",
    "sphinx_copybutton",
    "myst_parser",
]

copybutton_prompt_text = "\\$ |>>> "
copybutton_prompt_is_regexp = true

sphinx_click_mock_imports = []

[tool.sphinx-pyproject.intersphinx_mapping]
python = ["https://docs.python.org/3", "https://docs.python.org/3/objects.inv"]
numpy = ["https://numpy.org/doc/stable/", "https://numpy.org/doc/stable/objects.inv"]
matplotlib = ["https://matplotlib.org/stable/", "https://matplotlib.org/stable/objects.inv"]


[project.scripts]
astrageek = "astrageek.interface.cli:cli"